updated homepage and search
